# MailAgent

./: .env.infrastructure.example  .gitignore  AGENTS.md  Makefile  README.md  compose.yaml
agent/: .env.example  .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml
agent/docs/: public-contracts.md
agent/scripts/: ocr-service.sh
agent/src/mail_agent/: __init__.py  cli.py  config.py  dashboard.py  exceptions.py  logging.py  models.py  runtime.py  worker.py
agent/src/mail_agent/attachments/: __init__.py  parsers.py  validation.py
agent/src/mail_agent/clients/: __init__.py  llm.py  ocr.py  results_api.py
agent/src/mail_agent/graph/: __init__.py  builder.py  routing.py
agent/src/mail_agent/integrations/: __init__.py  drive.py  mail.py
agent/src/mail_agent/messages/: __init__.py  forwarded.py
agent/src/mail_agent/storage/: __init__.py  lock.py  processing_repository.py  workbook.py
agent/src/mail_agent/summarization/: __init__.py  classification.py  prompts.py  service.py
agent/tests/: __init__.py  conftest.py  test_chunked_summarization.py  test_classification.py  test_cli.py  test_config.py  test_config_and_attachments.py  test_dashboard.py  test_forwarded_messages.py  test_graph.py  test_llm_client.py  test_logging.py  test_mail_adapter.py  test_repository.py  test_results_api.py  test_summarization_prompts.py  test_workbook.py  test_worker.py
api-service/: .env.example  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml
api-service/app/: __init__.py  config.py  db.py  errors.py  main.py  maintenance.py  schemas.py  security.py
api-service/app/auth/: __init__.py  cli.py  dependencies.py  models.py  passwords.py  repository.py  router.py  schemas.py  service.py  validation.py
api-service/app/services/: __init__.py  ingestion.py
api-service/app/storage/: __init__.py  s3.py
api-service/docs/: README.md  api.md  architecture.md  operations.md
api-service/migrations/: env.py
api-service/migrations/versions/: 0001_results_schema.py  0002_authentication.py
api-service/tests/: test_api.py  test_auth.py  test_maintenance.py  test_migration.py
frontend/: .env.example  .oxfmtrc.json  AGENTS.md  README.md  api_reference.md  dashboard_plan.md  design_system.md  index.html  package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/api/: authToken.test.ts  authToken.ts  client.test.ts  client.ts  config.test.ts  config.ts  downloads.test.ts  downloads.ts  errors.test.ts  errors.ts  index.ts  queries.ts  queryKeys.ts  schemas.test.ts  schemas.ts  types.ts
frontend/src/app/: App.tsx  providers.tsx  router.tsx
frontend/src/features/: index.ts
frontend/src/mocks/: data.ts  handlers.ts  startMockWorker.ts
frontend/src/shared/: index.ts
llm-service/: .gitignore  AGENTS.md  Makefile  README.md  config.mk.example  config.worker.mk.example  pyproject.toml
llm-service/docs/: README.md  api.md  architecture.md  operations.md
ocr-service/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  cpu.env.example  pyproject.toml
ocr-service/app/: main.py
ocr-service/app/api/: __init__.py  dependencies.py  error_handlers.py
ocr-service/app/api/routes/: capabilities.py  documents.py  health.py  ocr.py
ocr-service/app/core/: config.py  exceptions.py  logging.py  request_context.py
ocr-service/app/schemas/: __init__.py  capabilities.py  common.py  documents.py  ocr.py
ocr-service/app/services/: capabilities.py  file_processor.py  inference_limiter.py  model_manager.py  normalizers.py  paddle_adapters.py  processing_service.py
ocr-service/docs/: README.md  api.md  architecture.md  operations.md
ocr-service/tests/: conftest.py
ocr-service/tests/api/: test_health_and_capabilities.py  test_processing.py
ocr-service/tests/integration/: test_paddle_smoke.py
ocr-service/tests/unit/: test_model_manager_and_limiter.py  test_paddle_adapters.py
yandex/drive/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
yandex/drive/docs/: README.md  architecture-and-security.md  cli.md  getting-started.md  python-api.md
yandex/drive/src/yandex_drive/: __init__.py  api_client.py  cli.py  config.py  exceptions.py  models.py  oauth.py  service.py  token_store.py
yandex/drive/tests/: __init__.py  conftest.py  test_api_client.py  test_cli.py  test_config.py  test_models.py  test_oauth.py  test_service.py  test_token_store.py
yandex/mail/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
yandex/mail/docs/: README.md  architecture-and-security.md  cli.md  getting-started.md  python-api.md
yandex/mail/tests/: test_cli.py  test_config.py  test_imap_client.py  test_models.py  test_oauth.py  test_parser.py  (+2 more)
(+133 files in other folders)
