[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "mail-agent"
version = "0.1.0"
description = "Непрерывный агент обработки Яндекс Почты"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.28",
  "langgraph>=0.2.70",
  "langgraph-checkpoint-sqlite>=2.0",
  "openpyxl>=3.1",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "pypdf>=5.0",
  "python-docx>=1.1",
  "python-pptx>=1.0",
  "xlrd>=2.0.1",
  "PyYAML>=6.0",
  "pymupdf>=1.24",
  "yandex-mail-sdk",
]

[project.optional-dependencies]
dev = ["mypy>=1.13", "pytest>=8.3", "ruff>=0.8"]

[project.scripts]
mail-agent = "mail_agent.cli:main"

[tool.uv.sources]
yandex-mail-sdk = { path = "../yandex/mail", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/mail_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["integration: opt-in smoke test against configured services"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
exclude = ["tests"]
ignore_missing_imports = true
