[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "mail-agent-results-api"
version = "0.1.0"
description = "API хранения результатов Mail Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14",
  "argon2-cffi>=23.1",
  "asyncpg>=0.30",
  "boto3>=1.35",
  "fastapi>=0.115",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = ["httpx>=0.28", "mypy>=1.13", "pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.8"]

[project.scripts]
mail-results-api = "app.main:run"
mail-results-partitions = "app.maintenance:main"
mail-results-orphans = "app.maintenance:orphan_main"
mail-results-auth = "app.auth.cli:auth_main"
mail-results-users = "app.auth.cli:users_main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
markers = ["integration: требует PostgreSQL и MinIO"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
exclude = ["tests"]
ignore_missing_imports = true
