[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yandex-drive-sdk"
version = "0.1.0"
description = "Reusable OAuth 2.0 client and CLI for Yandex Disk REST API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "python-dotenv>=1.0",
]
authors = [{name = "Yandex Drive SDK contributors"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
]

[project.scripts]
yandex-drive = "yandex_drive.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
